# wiener-linien-knowledge

./: .gitignore  LICENSE  README.md  docker-compose.yaml  notes.md  pyproject.toml
data/city/: registration_districts_names.csv  registration_districts_shapes.csv  vienna_population.csv
data/wiener_linien_gtfs/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
docker/: docker-compose.yaml
initializer/: Cargo.toml  Dockerfile
initializer/src/: importer.rs  main.rs
notebook/: .dockerignore  Dockerfile
notebook/src/: main.py
notebook/src/components/: graph.py  learning.py  prediction.py  presentation.py  types.py
notebook/src/styles/: notebook.css
src/: main.py
src/components/: geo_spatial.py  graph.py  learning.py  prediction.py  presentation.py  types.py
src/styles/: notebook.css
