[project]
name = "wiener-linien-knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "gtfs-kit>=10.3.1",
    "marimo>=0.14.16",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
]
